# Amr-Tarek-202174119

./: README.md
ai-essay-authenticity-uv/ai-essay-authenticity-uv/: MODEL_CARD.md  README.md  SUBMISSION_CHECKLIST.md  pyproject.toml
ai-essay-authenticity-uv/ai-essay-authenticity-uv/notebooks/: 01_eda.ipynb
ai-essay-authenticity-uv/ai-essay-authenticity-uv/src/: metrics.py  predict.py  train_baseline.py  train_transformer.py  utils.py
